<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/toolbar_detail_user"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.DetailUserActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="27dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/githubProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/githubicon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/githubName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/github_name"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/githubUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/github_username"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/githubCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/githubCompany"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/githubLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/githubLocation"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/githubUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/github_link"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/githubRepository"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/githubRepositoryValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/github_repository_value"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/githubFollower"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/githubFollowerValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/github_follower_value"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/githubFollowing"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/githubFollowingValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/github_following_value"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:paddingVertical="16dp">

            <Button
                android:id="@+id/githubShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/blue"
                android:text="@string/github_share"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/add_follow"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/ic_baseline_add_circle_outline_24"
            tools:layout_editor_absoluteX="296dp"
            tools:layout_editor_absoluteY="623dp" />


    </LinearLayout>


</LinearLayout>
