<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/githubProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/githubicon"/>

        <ImageView
            android:id="@+id/icon_company"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_company_icon"
            card_view:layout_constraintEnd_toEndOf="@id/githubUserName"
            card_view:layout_constraintHorizontal_bias="0.053"
            card_view:layout_constraintStart_toEndOf="@+id/githubProfile"
            card_view:layout_constraintTop_toBottomOf="@+id/githubName"
          />

        <TextView
            android:id="@+id/githubName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/githubProfile"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@+id/icon_github"
            card_view:layout_constraintTop_toTopOf="@+id/githubProfile"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/github_name" />


        <TextView
            android:id="@+id/githubUserName"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/githubProfile"
            android:text="@string/github_username"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/icon_github"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toEndOf="@+id/icon_github"
            card_view:layout_constraintTop_toTopOf="@+id/icon_github"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/icon_github"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/githubicon"
            card_view:layout_constraintEnd_toEndOf="@+id/icon_company"
            card_view:layout_constraintStart_toStartOf="@+id/icon_company"
            card_view:layout_constraintTop_toBottomOf="@+id/icon_company"
            android:contentDescription="@string/githubProfile" />

        <TextView
            android:id="@+id/githubCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/githubCompany"
            card_view:layout_constraintBottom_toBottomOf="@+id/icon_company"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/icon_company"
            card_view:layout_constraintTop_toTopOf="@+id/icon_company" />

    </androidx.constraintlayout.widget.ConstraintLayout >

</androidx.cardview.widget.CardView>